# pantomime-old

./: .clang-format  .gitignore  CMakeLists.txt  PantomimeConfig.h.in  README.md  pantomimeConfig.h.in
cmake/: config.h.cmake
doc/: Doxyfile.in
include/pantomime/: list_view.h  mpdwrapper.h  playlist_view.h  statusbar.h  stringlist.h  ui.h
src/: CMakeLists.txt  args.c  args.h  command.c  command.h  command_player.c  command_player.h  command_queue.c  command_queue.h  labels.c  labels.h  main.c  mpdclient.c  mpdclient.h  mpdwrapper.c  mpdwrapper.h  pantomime.c  screen_queue.c  screen_queue.h  statusbar.c  statusbar.h  stringlist.c  tracklist.c  tracklist.h  ui.c  ui.h
src/command/: CMakeLists.txt  command.c  command.h  command_global.c  command_global.h  command_library.c  command_library.h  command_player.c  command_player.h  command_queue.c  command_queue.h
src/mpdwrapper/: CMakeLists.txt  mpdwrapper.c  mpdwrapper.h  songlist.c  songlist.h
src/ui/: CMakeLists.txt  command.c  command.h  command_player.c  command_player.h  panel_help.c  panel_help.h  panel_queue.c  panel_queue.h  playlist.c  playlist.h  pmenu.c  pmenu.h  queue.c  queue.h  statusbar.c  statusbar.h  ui.c  ui.h
src/ui/screens/: screen_library.c  screen_library.h
src/ui/views/: list_view.c  list_view.h  list_view_internal.h  playlist_view.c  playlist_view.h  playlist_view_internal.h
test/: CMakeLists.txt  test_mpdwrapper.c  test_songlist.c
